CloudFormation-Template/3-Tier-WebApp-Template.yaml
---
Metadata:
  AWSToolsMetrics:
    IaC_Generator: "arn:aws:cloudformation:us-east-1:084375585267:generatedTemplate/aa8a4323-988c-4c33-a39f-4bcfb323c8e9"
Parameters:
  KeyName:
    Default: "DevOps-Project"
    Type: "String"
    Description: "Name of an existing EC2 KeyPair to enable SSH access"
  KeyName2:
    Default: "DevOps-Project"
    Type: "String"
    Description: "Name of an existing EC2 KeyPair to enable SSH access"
  KeyName3:
    Default: "DevOps-Project"
    Type: "String"
    Description: "Name of an existing EC2 KeyPair to enable SSH access"
Resources:
  EC2InstanceUx:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::Instance"
    DeletionPolicy: "Retain"
    Properties:
      Tenancy: "default"
      PrivateIpAddress: "10.0.0.58"
      MetadataOptions:
        HttpPutResponseHopLimit: 2
        HttpProtocolIpv6: "disabled"
        HttpTokens: "required"
        InstanceMetadataTags: "disabled"
        HttpEndpoint: "enabled"
      InstanceInitiatedShutdownBehavior: "stop"
      BlockDeviceMappings:
      - Ebs:
          SnapshotId: "snap-09306512928dfd537"
          VolumeType: "gp3"
          Iops: 3000
          VolumeSize: 8
          Encrypted: false
          DeleteOnTermination: true
        DeviceName: "/dev/xvda"
      PrivateDnsNameOptions:
        EnableResourceNameDnsARecord: false
        HostnameType: "ip-name"
        EnableResourceNameDnsAAAARecord: false
      SecurityGroupIds:
      - "sg-061cc8644634fb1f0"
      - "sg-0b117951dea8d7644"
      - "sg-0b9d939f2cdaa5d74"
      EbsOptimized: false
      DisableApiTermination: false
      SourceDestCheck: true
      PlacementGroupName: ""
      NetworkInterfaces:
      - Ipv6Addresses: []
        SecondaryPrivateIpAddressCount: 0
        NetworkInterfaceId: "eni-05066502f3c17e432"
        DeviceIndex: "0"
      ImageId: "ami-02dfbd4ff395f2a1b"
      InstanceType: "t2.micro"
      Monitoring: false
      Tags:
      - Value: "Webserver-Instance"
        Key: "Name"
      CreditSpecification:
        CPUCredits: "standard"
  EC2SubnetNetworkAclAssociation:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::SubnetNetworkAclAssociation"
    DeletionPolicy: "Retain"
    Properties:
      NetworkAclId: "acl-07eaabea6a3090fa8"
      SubnetId: "subnet-0eae0587e0c583a4c"
  EC2SubnetNetworkAclAssociationQ4:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::SubnetNetworkAclAssociation"
    DeletionPolicy: "Retain"
    Properties:
      NetworkAclId: "acl-07eaabea6a3090fa8"
      SubnetId: "subnet-0b9d69cf457ec8f90"
  EC2SubnetD0:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::Subnet"
    DeletionPolicy: "Retain"
    Properties:
      MapPublicIpOnLaunch: false
      EnableDns64: false
      VpcId: "vpc-04633d067f998a139"
      AvailabilityZoneId: "use1-az6"
      PrivateDnsNameOptionsOnLaunch:
        EnableResourceNameDnsARecord: false
        HostnameType: "ip-name"
        EnableResourceNameDnsAAAARecord: false
      AvailabilityZone: "us-east-1a"
      CidrBlock: "10.0.0.0/24"
      Ipv6Native: false
      Tags:
      - Value: "PublicSubnet1"
        Key: "Name"
  EC2SubnetRouteTableAssociationYZ:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    DeletionPolicy: "Retain"
    Properties:
      RouteTableId: "rtb-0ff4f25170a97a854"
      SubnetId: "subnet-0eae0587e0c583a4c"
  EC2SubnetNetworkAclAssociationCW:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::SubnetNetworkAclAssociation"
    DeletionPolicy: "Retain"
    Properties:
      NetworkAclId: "acl-07eaabea6a3090fa8"
      SubnetId: "subnet-042e6aa590e34c3cc"
  EC2NatGateway:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::NatGateway"
    DeletionPolicy: "Retain"
    Properties:
      PrivateIpAddress: "10.0.0.174"
      ConnectivityType: "public"
      VpcId: "vpc-04633d067f998a139"
      AvailabilityMode: "zonal"
      AllocationId: "eipalloc-002ff4cc717b192b1"
      SubnetId: "subnet-042e6aa590e34c3cc"
      Tags:
      - Value: "NATGateway1"
        Key: "Name"
  EC2SubnetRouteTableAssociationLc:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    DeletionPolicy: "Retain"
    Properties:
      RouteTableId: "rtb-0ff4f25170a97a854"
      SubnetId: "subnet-042e6aa590e34c3cc"
  EC2SecurityGroupRh:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::SecurityGroup"
    DeletionPolicy: "Retain"
    Properties:
      GroupDescription: "Security group for ALB"
      GroupName: "ALBSecurityGroup"
      VpcId: "vpc-04633d067f998a139"
      SecurityGroupIngress:
      - CidrIp: "0.0.0.0/0"
        IpProtocol: "tcp"
        FromPort: 80
        ToPort: 80
      - CidrIp: "0.0.0.0/0"
        IpProtocol: "tcp"
        FromPort: 443
        ToPort: 443
      SecurityGroupEgress:
      - CidrIp: "0.0.0.0/0"
        IpProtocol: "-1"
        FromPort: -1
        ToPort: -1
  EC2Instance:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::Instance"
    DeletionPolicy: "Retain"
    Properties:
      Tenancy: "default"
      PrivateIpAddress: "10.0.3.184"
      MetadataOptions:
        HttpPutResponseHopLimit: 2
        HttpProtocolIpv6: "disabled"
        HttpTokens: "required"
        InstanceMetadataTags: "disabled"
        HttpEndpoint: "enabled"
      UserData: "IyEvYmluL2Jhc2gKZXhlYyA+IC92YXIvbG9nL21hbnVhbC10ZXN0LmxvZyAyPiYxCnNldCAteArigIsKIyBVcGRhdGUgc3lzdGVtCnl1bSB1cGRhdGUgLXkK4oCLCiMgSW5zdGFsbCBBcGFjaGUgd2ViIHNlcnZlciwgbW9kX3NzbCwgYW5kIHJlbGF0ZWQgdG9vbHMKc3VkbyB5dW0gaW5zdGFsbCAteSBodHRwZCBodHRwZC10b29scyBtb2Rfc3NsCuKAiwojIEVuYWJsZSBhbmQgc3RhcnQgQXBhY2hlIHNlcnZpY2UKc3VkbyBzeXN0ZW1jdGwgZW5hYmxlIGh0dHBkCnN1ZG8gc3lzdGVtY3RsIHN0YXJ0IGh0dHBkCuKAiwojIEluc3RhbGwgUEhQIGFuZCBuZWNlc3NhcnkgZXh0ZW5zaW9ucwpzdWRvIHl1bSBpbnN0YWxsIC15IHBocCBwaHAtY29 [...]
      InstanceInitiatedShutdownBehavior: "stop"
      BlockDeviceMappings:
      - Ebs:
          SnapshotId: "snap-09306512928dfd537"
          VolumeType: "gp3"
          Iops: 3000
          VolumeSize: 8
          Encrypted: false
          DeleteOnTermination: true
        DeviceName: "/dev/xvda"
      PrivateDnsNameOptions:
        EnableResourceNameDnsARecord: false
        HostnameType: "ip-name"
        EnableResourceNameDnsAAAARecord: false
      SecurityGroupIds:
      - "sg-061cc8644634fb1f0"
      EbsOptimized: false
      DisableApiTermination: false
      SourceDestCheck: true
      PlacementGroupName: ""
      NetworkInterfaces:
      - Ipv6Addresses: []
        SecondaryPrivateIpAddressCount: 0
        NetworkInterfaceId: "eni-0ac4658e16142d834"
        DeviceIndex: "0"
      ImageId: "ami-02dfbd4ff395f2a1b"
      InstanceType: "t2.micro"
      Monitoring: false
      Tags:
      - Value: "ApplicationServer2"
        Key: "Name"
      CreditSpecification:
        CPUCredits: "standard"
  EC2NetworkInterfaceBg:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::NetworkInterface"
    DeletionPolicy: "Retain"
    Properties:
      SourceDestCheck: true
      InterfaceType: "interface"
      Description: ""
      PrivateIpAddress: "10.0.3.184"
      SecondaryPrivateIpAddressCount: 0
      Ipv6PrefixCount: 0
      Ipv4Prefixes: []
      Ipv4PrefixCount: 0
      GroupSet:
      - "sg-061cc8644634fb1f0"
      Ipv6Prefixes: []
      SubnetId: "subnet-028d255140bf637b6"
      Tags: []
  EC2SecurityGroupBY:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::SecurityGroup"
    DeletionPolicy: "Retain"
    Properties:
      GroupDescription: "Allow SSH access"
      GroupName: "SSHSecurityGroup"
      VpcId: "vpc-04633d067f998a139"
      SecurityGroupIngress:
      - CidrIp: "49.185.106.95/32"
        IpProtocol: "tcp"
        FromPort: 22
        ToPort: 22
      SecurityGroupEgress:
      - CidrIp: "0.0.0.0/0"
        IpProtocol: "-1"
        FromPort: -1
        ToPort: -1
  EC2SubnetMe:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::Subnet"
    DeletionPolicy: "Retain"
    Properties:
      MapPublicIpOnLaunch: false
      EnableDns64: false
      VpcId: "vpc-04633d067f998a139"
      AvailabilityZoneId: "use1-az1"
      PrivateDnsNameOptionsOnLaunch:
        EnableResourceNameDnsARecord: false
        HostnameType: "ip-name"
        EnableResourceNameDnsAAAARecord: false
      AvailabilityZone: "us-east-1b"
      CidrBlock: "10.0.1.0/24"
      Ipv6Native: false
      Tags:
      - Value: "PublicSubnet2"
        Key: "Name"
  EC2DHCPOptions:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::DHCPOptions"
    DeletionPolicy: "Retain"
    Properties:
      DomainName: "ec2.internal"
      DomainNameServers:
      - "AmazonProvidedDNS"
      Tags: []
  EC2Route:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::Route"
    DeletionPolicy: "Retain"
    Properties:
      RouteTableId: "rtb-03eb435baf80f8bc9"
      DestinationCidrBlock: "10.0.0.0/16"
      GatewayId: "local"
      VpcEndpointId: "local"
  KMSKey:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::KMS::Key"
    DeletionPolicy: "Retain"
    Properties:
      Origin: "AWS_KMS"
      MultiRegion: false
      Description: "Default key that protects my RDS database volumes when no other\
        \ key is defined"
      KeyPolicy:
        Version: "2012-10-17"
        Statement:
        - Condition:
            StringEquals:
              kms:ViaService: "rds.us-east-1.amazonaws.com"
              kms:CallerAccount: "084375585267"
          Resource: "*"
          Action:
          - "kms:Encrypt"
          - "kms:Decrypt"
          - "kms:ReEncrypt*"
          - "kms:GenerateDataKey*"
          - "kms:CreateGrant"
          - "kms:ListGrants"
          - "kms:DescribeKey"
          Effect: "Allow"
          Principal:
            AWS: "*"
          Sid: "Allow access through RDS for all principals in the account that are\
            \ authorized to use RDS"
        - Resource: "*"
          Action:
          - "kms:Describe*"
          - "kms:Get*"
          - "kms:List*"
          - "kms:RevokeGrant"
          Effect: "Allow"
          Principal:
            AWS: "arn:aws:iam::084375585267:root"
          Sid: "Allow direct access to key metadata to the account"
        Id: "auto-rds-2"
      KeySpec: "SYMMETRIC_DEFAULT"
      Enabled: true
      EnableKeyRotation: true
      KeyUsage: "ENCRYPT_DECRYPT"
      Tags: []
  RDSDBInstance:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::RDS::DBInstance"
    DeletionPolicy: "Retain"
    Properties:
      DatabaseInsightsMode: "standard"
      StorageEncrypted: true
      AssociatedRoles: []
      Port: "3306"
      AdditionalStorageVolumes: []
      ProcessorFeatures: []
      StorageThroughput: 0
      PreferredBackupWindow: "05:38-06:08"
      MonitoringInterval: 0
      DBParameterGroupName: "default.mysql8.4"
      NetworkType: "IPV4"
      DedicatedLogVolume: false
      CopyTagsToSnapshot: true
      MultiAZ: false
      Engine: "mysql"
      Tags: []
      EngineLifecycleSupport: "open-source-rds-extended-support-disabled"
      LicenseModel: "general-public-license"
      EngineVersion: "8.4.7"
      StorageType: "gp2"
      KmsKeyId: "arn:aws:kms:us-east-1:084375585267:key/b30d42b4-6b54-4d23-a580-826c7544034e"
      DBInstanceClass: "db.t4g.micro"
      AvailabilityZone: "us-east-1a"
      OptionGroupName: "default:mysql-8-4"
      PreferredMaintenanceWindow: "tue:09:11-tue:09:41"
      EnablePerformanceInsights: false
      AutoMinorVersionUpgrade: true
      DBSubnetGroupName: "mydbsubnetgroup"
      DeletionProtection: false
      DBInstanceIdentifier: "mymysqldatabase"
      AllocatedStorage: "20"
      BackupTarget: "region"
      CACertificateIdentifier: "rds-ca-rsa2048-g1"
      ManageMasterUserPassword: false
      MasterUserSecret: {}
      VPCSecurityGroups:
      - "sg-083a64e23ef1ed298"
      DBSecurityGroups: []
      MasterUsername: "admin"
      MaxAllocatedStorage: 1000
      DBName: "mydatabase"
      EnableIAMDatabaseAuthentication: false
      PubliclyAccessible: false
      BackupRetentionPeriod: 1
      EnableCloudwatchLogsExports: []
  EC2RouteIa:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::Route"
    DeletionPolicy: "Retain"
    Properties:
      RouteTableId: "rtb-0ffc44456f7ff18c9"
      DestinationCidrBlock: "10.0.0.0/16"
      GatewayId: "local"
      VpcEndpointId: "local"
  EC2SubnetRouteTableAssociationQs:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    DeletionPolicy: "Retain"
    Properties:
      RouteTableId: "rtb-060add744cd25e981"
      SubnetId: "subnet-0b9d69cf457ec8f90"
  EC2VPCDHCPOptionsAssociation:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::VPCDHCPOptionsAssociation"
    DeletionPolicy: "Retain"
    Properties:
      VpcId: "vpc-04633d067f998a139"
      DhcpOptionsId: "dopt-0622f91a720bcfd7a"
  EC2SecurityGroupCJ:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::SecurityGroup"
    DeletionPolicy: "Retain"
    Properties:
      GroupDescription: "Security group for elastic file system"
      GroupName: "EFSSecurityGroup"
      VpcId: "vpc-04633d067f998a139"
      SecurityGroupIngress:
      - IpProtocol: "tcp"
        FromPort: 2049
        SourceSecurityGroupId: "sg-061cc8644634fb1f0"
        ToPort: 2049
        SourceSecurityGroupOwnerId: "084375585267"
      - IpProtocol: "tcp"
        FromPort: 2049
        SourceSecurityGroupId: "sg-0c1988d2fd44790d8"
        ToPort: 2049
        SourceSecurityGroupOwnerId: "084375585267"
      SecurityGroupEgress:
      - CidrIp: "0.0.0.0/0"
        IpProtocol: "-1"
        FromPort: -1
        ToPort: -1
  ElasticLoadBalancingV2LoadBalancerLoadbalancerappMyALB94a7ef8676a02b01:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::ElasticLoadBalancingV2::LoadBalancer"
    DeletionPolicy: "Retain"
    Properties:
      IpAddressType: "ipv4"
      SecurityGroups:
      - "sg-0b9d939f2cdaa5d74"
      LoadBalancerAttributes:
      - Value: ""
        Key: "access_logs.s3.prefix"
      - Value: "append"
        Key: "routing.http.xff_header_processing.mode"
      - Value: "true"
        Key: "routing.http2.enabled"
      - Value: "false"
        Key: "waf.fail_open.enabled"
      - Value: ""
        Key: "connection_logs.s3.bucket"
      - Value: "false"
        Key: "access_logs.s3.enabled"
      - Value: "false"
        Key: "zonal_shift.config.enabled"
      - Value: "defensive"
        Key: "routing.http.desync_mitigation_mode"
      - Value: ""
        Key: "connection_logs.s3.prefix"
      - Value: ""
        Key: "health_check_logs.s3.prefix"
      - Value: "false"
        Key: "routing.http.x_amzn_tls_version_and_cipher_suite.enabled"
      - Value: "false"
        Key: "routing.http.preserve_host_header.enabled"
      - Value: "true"
        Key: "load_balancing.cross_zone.enabled"
      - Value: "false"
        Key: "health_check_logs.s3.enabled"
      - Value: ""
        Key: "health_check_logs.s3.bucket"
      - Value: "false"
        Key: "routing.http.xff_client_port.enabled"
      - Value: ""
        Key: "access_logs.s3.bucket"
      - Value: "false"
        Key: "deletion_protection.enabled"
      - Value: "3600"
        Key: "client_keep_alive.seconds"
      - Value: "false"
        Key: "routing.http.drop_invalid_header_fields.enabled"
      - Value: "false"
        Key: "connection_logs.s3.enabled"
      - Value: "60"
        Key: "idle_timeout.timeout_seconds"
      Subnets:
      - "subnet-042e6aa590e34c3cc"
      - "subnet-0eae0587e0c583a4c"
      Type: "application"
      Scheme: "internet-facing"
      EnablePrefixForIpv6SourceNat: "off"
      Tags: []
      Name: "MyALB"
      SubnetMappings:
      - SubnetId: "subnet-042e6aa590e34c3cc"
      - SubnetId: "subnet-0eae0587e0c583a4c"
  EC2NetworkInterface:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::NetworkInterface"
    DeletionPolicy: "Retain"
    Properties:
      SourceDestCheck: true
      InterfaceType: "interface"
      Description: ""
      PrivateIpAddress: "10.0.0.58"
      SecondaryPrivateIpAddressCount: 0
      Ipv6PrefixCount: 0
      Ipv4Prefixes: []
      Ipv4PrefixCount: 0
      GroupSet:
      - "sg-061cc8644634fb1f0"
      - "sg-0b117951dea8d7644"
      - "sg-0b9d939f2cdaa5d74"
      Ipv6Prefixes: []
      SubnetId: "subnet-042e6aa590e34c3cc"
      Tags: []
  EC2InternetGateway:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::InternetGateway"
    DeletionPolicy: "Retain"
    Properties:
      Tags:
      - Value: "MyIGW-3Tier"
        Key: "Name"
  EC2SubnetRouteTableAssociation:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    DeletionPolicy: "Retain"
    Properties:
      RouteTableId: "rtb-0ffc44456f7ff18c9"
      SubnetId: "subnet-02f5ef86a2348c7e2"
  EC2EIP100493169:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::EIP"
    DeletionPolicy: "Retain"
    Properties:
      PublicIpv4Pool: "amazon"
      Domain: "vpc"
      Tags: []
      NetworkBorderGroup: "us-east-1"
  EC2NetworkAcl:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::NetworkAcl"
    DeletionPolicy: "Retain"
    Properties:
      VpcId: "vpc-04633d067f998a139"
      Tags: []
  Route53ResolverResolverRuleAssociation:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::Route53Resolver::ResolverRuleAssociation"
    DeletionPolicy: "Retain"
    Properties:
      VPCId: "vpc-04633d067f998a139"
      ResolverRuleId: "rslvr-autodefined-rr-internet-resolver"
      Name: "System Rule Association"
  EC2RouteLo:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::Route"
    DeletionPolicy: "Retain"
    Properties:
      RouteTableId: "rtb-060add744cd25e981"
      DestinationCidrBlock: "10.0.0.0/16"
      GatewayId: "local"
      VpcEndpointId: "local"
  EC2NetworkInterfaceRT:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::NetworkInterface"
    DeletionPolicy: "Retain"
    Properties:
      SourceDestCheck: true
      InterfaceType: "interface"
      Description: ""
      PrivateIpAddress: "10.0.2.55"
      SecondaryPrivateIpAddressCount: 0
      Ipv6PrefixCount: 0
      Ipv4Prefixes: []
      Ipv4PrefixCount: 0
      GroupSet:
      - "sg-061cc8644634fb1f0"
      Ipv6Prefixes: []
      SubnetId: "subnet-0192c0516353b3977"
      Tags: []
  EC2Subnet:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::Subnet"
    DeletionPolicy: "Retain"
    Properties:
      MapPublicIpOnLaunch: false
      EnableDns64: false
      VpcId: "vpc-04633d067f998a139"
      AvailabilityZoneId: "use1-az6"
      PrivateDnsNameOptionsOnLaunch:
        EnableResourceNameDnsARecord: false
        HostnameType: "ip-name"
        EnableResourceNameDnsAAAARecord: false
      AvailabilityZone: "us-east-1a"
      CidrBlock: "10.0.2.0/24"
      Ipv6Native: false
      Tags:
      - Value: "PrivateAppSubnet1"
        Key: "Name"
  EC2SecurityGroup:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::SecurityGroup"
    DeletionPolicy: "Retain"
    Properties:
      GroupDescription: "default VPC security group"
      GroupName: "default"
      VpcId: "vpc-04633d067f998a139"
      SecurityGroupIngress:
      - IpProtocol: "-1"
        FromPort: -1
        SourceSecurityGroupId: "sg-049bfd170a1029bda"
        ToPort: -1
        SourceSecurityGroupOwnerId: "084375585267"
      SecurityGroupEgress:
      - CidrIp: "0.0.0.0/0"
        IpProtocol: "-1"
        FromPort: -1
        ToPort: -1
  ElasticLoadBalancingV2TargetGroupTargetgroupMyAppServers11877aa791ab0e5f:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::ElasticLoadBalancingV2::TargetGroup"
    DeletionPolicy: "Retain"
    Properties:
      IpAddressType: "ipv4"
      HealthCheckIntervalSeconds: 30
      Matcher:
        HttpCode: "200"
      HealthCheckPath: "/"
      Port: 80
      Targets:
      - Port: 80
        Id: "i-05e0421e579292df0"
      - Port: 80
        Id: "i-0340445c05977e5b5"
      HealthCheckEnabled: true
      ProtocolVersion: "HTTP1"
      UnhealthyThresholdCount: 2
      HealthCheckTimeoutSeconds: 5
      Name: "MyAppServers"
      VpcId: "vpc-04633d067f998a139"
      HealthyThresholdCount: 5
      HealthCheckProtocol: "HTTP"
      TargetGroupAttributes:
      - Value: "lb_cookie"
        Key: "stickiness.type"
      - Value: "86400"
        Key: "stickiness.app_cookie.duration_seconds"
      - Value: "1"
        Key: "target_group_health.dns_failover.minimum_healthy_targets.count"
      - Value: "use_load_balancer_configuration"
        Key: "load_balancing.cross_zone.enabled"
      - Value: "86400"
        Key: "stickiness.lb_cookie.duration_seconds"
      - Value: "off"
        Key: "target_group_health.dns_failover.minimum_healthy_targets.percentage"
      - Value: "false"
        Key: "stickiness.enabled"
      - Value: "off"
        Key: "target_group_health.unhealthy_state_routing.minimum_healthy_targets.percentage"
      - Value: "0"
        Key: "slow_start.duration_seconds"
      - Value: "300"
        Key: "deregistration_delay.timeout_seconds"
      - Value: "1"
        Key: "target_group_health.unhealthy_state_routing.minimum_healthy_targets.count"
      - Value: "off"
        Key: "load_balancing.algorithm.anomaly_mitigation"
      - Value: ""
        Key: "stickiness.app_cookie.cookie_name"
      - Value: "round_robin"
        Key: "load_balancing.algorithm.type"
      TargetType: "instance"
      HealthCheckPort: "traffic-port"
      Protocol: "HTTP"
      Tags: []
  EC2EIP1004812343:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::EIP"
    DeletionPolicy: "Retain"
    Properties:
      PublicIpv4Pool: "amazon"
      Domain: "vpc"
      Tags: []
      NetworkBorderGroup: "us-east-1"
  EC2VolumeAttachmentXL:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::VolumeAttachment"
    DeletionPolicy: "Retain"
    Properties:
      VolumeId: "vol-06274b488a7d5ff62"
      InstanceId: "i-08c92253eda183652"
      Device: "/dev/xvda"
      EbsCardIndex: 0
  EC2RoutePm:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::Route"
    DeletionPolicy: "Retain"
    Properties:
      RouteTableId: "rtb-0ff4f25170a97a854"
      DestinationCidrBlock: "10.0.0.0/16"
      GatewayId: "local"
      VpcEndpointId: "local"
  ElasticLoadBalancingV2ListenerListenerappMyALB94a7ef8676a02b01bc060cedd245907a:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::ElasticLoadBalancingV2::Listener"
    DeletionPolicy: "Retain"
    Properties:
      ListenerAttributes:
      - Value: "true"
        Key: "routing.http.response.server.enabled"
      - Value: ""
        Key: "routing.http.response.access_control_allow_headers.header_value"
      - Value: ""
        Key: "routing.http.response.x_frame_options.header_value"
      - Value: ""
        Key: "routing.http.response.access_control_allow_methods.header_value"
      - Value: ""
        Key: "routing.http.response.access_control_allow_origin.header_value"
      - Value: ""
        Key: "routing.http.response.access_control_allow_credentials.header_value"
      - Value: ""
        Key: "routing.http.response.x_content_type_options.header_value"
      - Value: ""
        Key: "routing.http.response.content_security_policy.header_value"
      - Value: ""
        Key: "routing.http.response.access_control_expose_headers.header_value"
      - Value: ""
        Key: "routing.http.response.strict_transport_security.header_value"
      - Value: ""
        Key: "routing.http.response.access_control_max_age.header_value"
      Protocol: "HTTP"
      LoadBalancerArn: "arn:aws:elasticloadbalancing:us-east-1:084375585267:loadbalancer/app/MyALB/94a7ef8676a02b01"
      DefaultActions:
      - Order: 1
        TargetGroupArn: "arn:aws:elasticloadbalancing:us-east-1:084375585267:targetgroup/MyAppServers/11877aa791ab0e5f"
        Type: "forward"
        ForwardConfig:
          TargetGroupStickinessConfig:
            Enabled: false
            DurationSeconds: 3600
          TargetGroups:
          - TargetGroupArn: "arn:aws:elasticloadbalancing:us-east-1:084375585267:targetgroup/MyAppServers/11877aa791ab0e5f"
            Weight: 1
      Port: 80
  EC2NatGatewayS5:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::NatGateway"
    DeletionPolicy: "Retain"
    Properties:
      PrivateIpAddress: "10.0.1.48"
      ConnectivityType: "public"
      VpcId: "vpc-04633d067f998a139"
      AvailabilityMode: "zonal"
      AllocationId: "eipalloc-0b3db81815f620e1b"
      SubnetId: "subnet-0eae0587e0c583a4c"
      Tags:
      - Value: "NATGateway2"
        Key: "Name"
  EC2SubnetVA:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::Subnet"
    DeletionPolicy: "Retain"
    Properties:
      MapPublicIpOnLaunch: false
      EnableDns64: false
      VpcId: "vpc-04633d067f998a139"
      AvailabilityZoneId: "use1-az6"
      PrivateDnsNameOptionsOnLaunch:
        EnableResourceNameDnsARecord: false
        HostnameType: "ip-name"
        EnableResourceNameDnsAAAARecord: false
      AvailabilityZone: "us-east-1a"
      CidrBlock: "10.0.4.0/24"
      Ipv6Native: false
      Tags:
      - Value: "PrivateDBSubnet1"
        Key: "Name"
  EC2SubnetNetworkAclAssociationDz:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::SubnetNetworkAclAssociation"
    DeletionPolicy: "Retain"
    Properties:
      NetworkAclId: "acl-07eaabea6a3090fa8"
      SubnetId: "subnet-0192c0516353b3977"
  EC2RouteTableU7:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::RouteTable"
    DeletionPolicy: "Retain"
    Properties:
      VpcId: "vpc-04633d067f998a139"
      Tags:
      - Value: "PrivateRouteTableAZ2"
        Key: "Name"
  EC2VolumeAttachment:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::VolumeAttachment"
    DeletionPolicy: "Retain"
    Properties:
      VolumeId: "vol-05b79e13b32464241"
      InstanceId: "i-0340445c05977e5b5"
      Device: "/dev/xvda"
      EbsCardIndex: 0
  EC2SecurityGroupK4:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::SecurityGroup"
    DeletionPolicy: "Retain"
    Properties:
      GroupDescription: "Security group for web server"
      GroupName: "WebServerSecurityGroup"
      VpcId: "vpc-04633d067f998a139"
      SecurityGroupIngress:
      - IpProtocol: "tcp"
        FromPort: 80
        SourceSecurityGroupId: "sg-0b9d939f2cdaa5d74"
        ToPort: 80
        SourceSecurityGroupOwnerId: "084375585267"
      - IpProtocol: "tcp"
        FromPort: 22
        SourceSecurityGroupId: "sg-0b117951dea8d7644"
        ToPort: 22
        SourceSecurityGroupOwnerId: "084375585267"
      - IpProtocol: "tcp"
        FromPort: 443
        SourceSecurityGroupId: "sg-0b9d939f2cdaa5d74"
        ToPort: 443
        SourceSecurityGroupOwnerId: "084375585267"
      SecurityGroupEgress:
      - CidrIp: "0.0.0.0/0"
        IpProtocol: "-1"
        FromPort: -1
        ToPort: -1
  EC2RoutePa:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::Route"
    DeletionPolicy: "Retain"
    Properties:
      RouteTableId: "rtb-0ff4f25170a97a854"
      DestinationCidrBlock: "0.0.0.0/0"
      GatewayId: "igw-0bbdc296dc2f886b7"
      VpcEndpointId: "igw-0bbdc296dc2f886b7"
  EC2SubnetNetworkAclAssociationJ7:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::SubnetNetworkAclAssociation"
    DeletionPolicy: "Retain"
    Properties:
      NetworkAclId: "acl-07eaabea6a3090fa8"
      SubnetId: "subnet-028d255140bf637b6"
  EC2SubnetRouteTableAssociationBZ:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    DeletionPolicy: "Retain"
    Properties:
      RouteTableId: "rtb-060add744cd25e981"
      SubnetId: "subnet-0192c0516353b3977"
  EC2RouteTableY6:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::RouteTable"
    DeletionPolicy: "Retain"
    Properties:
      VpcId: "vpc-04633d067f998a139"
      Tags:
      - Value: "PublicRouteTable"
        Key: "Name"
  EC2SecurityGroupAt:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::SecurityGroup"
    DeletionPolicy: "Retain"
    Properties:
      GroupDescription: "Security group for database"
      GroupName: "DatabaseSecurityGroup"
      VpcId: "vpc-04633d067f998a139"
      SecurityGroupIngress:
      - IpProtocol: "tcp"
        FromPort: 3306
        SourceSecurityGroupId: "sg-061cc8644634fb1f0"
        ToPort: 3306
        SourceSecurityGroupOwnerId: "084375585267"
      SecurityGroupEgress:
      - CidrIp: "0.0.0.0/0"
        IpProtocol: "-1"
        FromPort: -1
        ToPort: -1
  EC2SubnetIJ:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::Subnet"
    DeletionPolicy: "Retain"
    Properties:
      MapPublicIpOnLaunch: false
      EnableDns64: false
      VpcId: "vpc-04633d067f998a139"
      AvailabilityZoneId: "use1-az1"
      PrivateDnsNameOptionsOnLaunch:
        EnableResourceNameDnsARecord: false
        HostnameType: "ip-name"
        EnableResourceNameDnsAAAARecord: false
      AvailabilityZone: "us-east-1b"
      CidrBlock: "10.0.5.0/24"
      Ipv6Native: false
      Tags:
      - Value: "PrivateDBSubnet2"
        Key: "Name"
  EC2RouteHR:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::Route"
    DeletionPolicy: "Retain"
    Properties:
      NatGatewayId: "nat-0abd032696ee8ef3f"
      RouteTableId: "rtb-0ffc44456f7ff18c9"
      DestinationCidrBlock: "0.0.0.0/0"
  EC2InstanceMS:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::Instance"
    DeletionPolicy: "Retain"
    Properties:
      Tenancy: "default"
      PrivateIpAddress: "10.0.2.55"
      MetadataOptions:
        HttpPutResponseHopLimit: 2
        HttpProtocolIpv6: "disabled"
        HttpTokens: "required"
        InstanceMetadataTags: "disabled"
        HttpEndpoint: "enabled"
      UserData: "IyEvYmluL2Jhc2gKZXhlYyA+IC92YXIvbG9nL21hbnVhbC10ZXN0LmxvZyAyPiYxCnNldCAteArigIsKIyBVcGRhdGUgc3lzdGVtCnl1bSB1cGRhdGUgLXkK4oCLCiMgSW5zdGFsbCBBcGFjaGUgd2ViIHNlcnZlciwgbW9kX3NzbCwgYW5kIHJlbGF0ZWQgdG9vbHMKc3VkbyB5dW0gaW5zdGFsbCAteSBodHRwZCBodHRwZC10b29scyBtb2Rfc3NsCuKAiwojIEVuYWJsZSBhbmQgc3RhcnQgQXBhY2hlIHNlcnZpY2UKc3VkbyBzeXN0ZW1jdGwgZW5hYmxlIGh0dHBkCnN1ZG8gc3lzdGVtY3RsIHN0YXJ0IGh0dHBkCuKAiwojIEluc3RhbGwgUEhQIGFuZCBuZWNlc3NhcnkgZXh0ZW5zaW9ucwpzdWRvIHl1bSBpbnN0YWxsIC15IHBocCBwaHAtY29 [...]
      InstanceInitiatedShutdownBehavior: "stop"
      BlockDeviceMappings:
      - Ebs:
          SnapshotId: "snap-09306512928dfd537"
          VolumeType: "gp3"
          Iops: 3000
          VolumeSize: 8
          Encrypted: false
          DeleteOnTermination: true
        DeviceName: "/dev/xvda"
      PrivateDnsNameOptions:
        EnableResourceNameDnsARecord: false
        HostnameType: "ip-name"
        EnableResourceNameDnsAAAARecord: false
      SecurityGroupIds:
      - "sg-061cc8644634fb1f0"
      EbsOptimized: false
      DisableApiTermination: false
      SourceDestCheck: true
      PlacementGroupName: ""
      NetworkInterfaces:
      - Ipv6Addresses: []
        SecondaryPrivateIpAddressCount: 0
        NetworkInterfaceId: "eni-0a31c49738442813c"
        DeviceIndex: "0"
      ImageId: "ami-02dfbd4ff395f2a1b"
      InstanceType: "t2.micro"
      Monitoring: false
      Tags:
      - Value: "ApplicationServer1"
        Key: "Name"
      CreditSpecification:
        CPUCredits: "standard"
  EC2SubnetRouteTableAssociationHX:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    DeletionPolicy: "Retain"
    Properties:
      RouteTableId: "rtb-0ffc44456f7ff18c9"
      SubnetId: "subnet-028d255140bf637b6"
  EC2Volume:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::Volume"
    DeletionPolicy: "Retain"
    Properties:
      MultiAttachEnabled: false
      SnapshotId: "snap-09306512928dfd537"
      VolumeType: "gp3"
      Encrypted: false
      Size: 8
      AutoEnableIO: true
      AvailabilityZoneId: "use1-az1"
      AvailabilityZone: "us-east-1b"
      Throughput: 125
      Iops: 3000
      Tags: []
  EC2RouteTX:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::Route"
    DeletionPolicy: "Retain"
    Properties:
      NatGatewayId: "nat-04184244b3acd13be"
      RouteTableId: "rtb-060add744cd25e981"
      DestinationCidrBlock: "0.0.0.0/0"
  EC2VolumeAttachmentCt:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::VolumeAttachment"
    DeletionPolicy: "Retain"
    Properties:
      VolumeId: "vol-077d38eb416b3aa74"
      InstanceId: "i-05e0421e579292df0"
      Device: "/dev/xvda"
      EbsCardIndex: 0
  EC2RouteTableJl:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::RouteTable"
    DeletionPolicy: "Retain"
    Properties:
      VpcId: "vpc-04633d067f998a139"
      Tags:
      - Value: "PrivateRouteTableAZ1"
        Key: "Name"
  EC2VolumeRT:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::Volume"
    DeletionPolicy: "Retain"
    Properties:
      MultiAttachEnabled: false
      SnapshotId: "snap-09306512928dfd537"
      VolumeType: "gp3"
      Encrypted: false
      Size: 8
      AutoEnableIO: true
      AvailabilityZoneId: "use1-az6"
      AvailabilityZone: "us-east-1a"
      Throughput: 125
      Iops: 3000
      Tags: []
  RDSDBSubnetGroupMydbsubnetgroup:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::RDS::DBSubnetGroup"
    DeletionPolicy: "Retain"
    Properties:
      DBSubnetGroupDescription: "Subnet group for MySQL database"
      SubnetIds:
      - "subnet-02f5ef86a2348c7e2"
      - "subnet-0b9d69cf457ec8f90"
      DBSubnetGroupName: "mydbsubnetgroup"
  EC2VPC:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::VPC"
    DeletionPolicy: "Retain"
    Properties:
      CidrBlock: "10.0.0.0/16"
      EnableDnsSupport: true
      InstanceTenancy: "default"
      EnableDnsHostnames: true
      Tags:
      - Value: "3-Tier-webapp"
        Key: "Name"
  EC2RouteTable:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::RouteTable"
    DeletionPolicy: "Retain"
    Properties:
      VpcId: "vpc-04633d067f998a139"
  EC2VolumeIu:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::Volume"
    DeletionPolicy: "Retain"
    Properties:
      MultiAttachEnabled: false
      SnapshotId: "snap-09306512928dfd537"
      VolumeType: "gp3"
      Encrypted: false
      Size: 8
      AutoEnableIO: true
      AvailabilityZoneId: "use1-az6"
      AvailabilityZone: "us-east-1a"
      Throughput: 125
      Iops: 3000
      Tags: []
  EC2SubnetDC:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::Subnet"
    DeletionPolicy: "Retain"
    Properties:
      MapPublicIpOnLaunch: false
      EnableDns64: false
      VpcId: "vpc-04633d067f998a139"
      AvailabilityZoneId: "use1-az1"
      PrivateDnsNameOptionsOnLaunch:
        EnableResourceNameDnsARecord: false
        HostnameType: "ip-name"
        EnableResourceNameDnsAAAARecord: false
      AvailabilityZone: "us-east-1b"
      CidrBlock: "10.0.3.0/24"
      Ipv6Native: false
      Tags:
      - Value: "PrivateAppSubnet2"
        Key: "Name"
  EC2SubnetNetworkAclAssociationBR:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::SubnetNetworkAclAssociation"
    DeletionPolicy: "Retain"
    Properties:
      NetworkAclId: "acl-07eaabea6a3090fa8"
      SubnetId: "subnet-02f5ef86a2348c7e2"
